Fixed layout bug.

--- a/unichat_app/static/home/home.css
+++ b/unichat_app/static/home/home.css
@@ -1,8 +1,9 @@
 /* left col */
 #left_col {
     height: 100vh;
-    min-height: 513px;
+    min-height: 520px;
     background-color: rgb(45, 50, 56);
+    position: relative;
 }
 #user_avatar_container {
     -webkit-box-shadow: 0 0 5px rgb(148, 219, 255);
@@ -24,7 +25,7 @@
 #mid_col {
     height: 100vh;
     width: 300px;
-    min-height: 513px;
+    min-height: 520px;
     background-color: rgb(249, 249, 249);
     border-right: thin solid rgb(226, 226, 226);
 }
@@ -48,7 +49,8 @@
 /* right col */
 #right_col {
     height: 100vh;
-    min-height: 513px;
+    min-height: 520px;
+    min-width: 430px;
     background-color: rgb(243, 243, 243);
 }
 #msg_display_header {
@@ -68,6 +70,7 @@
 #msg_typing_window {
     height: 20vh;
     min-height: 167px;
+    position: relative;
 }
 #msg_typing_area {
     padding-top: 10px;
@@ -85,14 +88,15 @@
 }
 #msg_send_btn_container {
     height: 50px;
+    position: absolute;
+    right: 0;
 }
 #msg_send_btn {
     height: 30px;
     width: 50px;
     border: none;
     background-color: rgb(0, 172, 72);
-    position: absolute;
-    right: 0;
+
     margin: 10px;
 }
 #msg_send_btn:active {
@@ -170,6 +174,7 @@
 .container-fluid {
     height: 100vh;
     width: 100vw;
+    min-height: 520px;
     min-width: 800px;
     padding: 0;
     margin: 0;
